# 3d-space-query

./: .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  README.md  build-wasm.sh  jest.config.js  package-lock.json  package.json  tsconfig.benchmark.json  tsconfig.esm.json  tsconfig.json  tsconfig.test.json  tsconfig.web.json  webpack.config.js  webpack.config.web.js
__tests__/: engine.test.ts
__tests__/utils/: ground-truth-generator.ts  index.ts  test-data-generator.ts
benchmark/: build.ts  index.ts  search.ts
benchmark/results/: build-1.2.0.benchmark.chart.html  search-in-10-primitives-1.2.0.benchmark.chart.html
page/: index.html  index.ts  test-utils.ts  tests.ts  utils.ts
page/test-cases/: groundtruth.ts  index.ts  js-build-search.ts  native-build-js-search.ts  native-build-search.ts
page/test-utils/: define-test.ts  run-test.ts  test-runner.ts
src/: BVHNode.ts  Engine.ts  index.ts
src/js/: AABB.ts  BVHNode.ts  BestSplit.ts  Bin.ts  Engine.ts  index.ts  searcher.ts  types.ts
src/js/utils/: index.ts  intersector.ts  misc.ts  vector-operators.ts
src/utils/: index.ts  intersector.ts  misc.ts
src/wasm/: memory-allocator.ts  searcher.ts  wrapper.ts
src/wasm/native/assembly_module/: CMakeLists.txt  wasm-core.d.ts
src/wasm/native/lib/: BestSplit.h  BvhNode.h  CMakeLists.txt  aabb.h  bin.h  binding.cpp  box.h  builder.cpp  builder.h  engine.cpp  engine.h  primitive.h  searcher.cpp  searcher.h  utils.h
src/wasm/native/lib/functional/: CMakeLists.txt  builder.cpp  builder.h  searcher.cpp  searcher.h
src/wasm/native/test_driver/: CMakeLists.txt  main.cpp  utils.h
utils/: index.ts  time-measurer.ts
